discussion/kv_engine/181792/181792_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[BP] MB-53586: Fix error path for get_scope_id

cherry-picks: 2592bd6f2

For unknown collection get_scope_id was returning an incorrectly
initialised EngineErrorGetScopeIDResult meaning the manifest-UID
used for lookup was not included (default of 0 was returned to
client). This commit could be back-ported if required.

Note that the changes to cb::EngineErrorGetScopeIDResult are
to be cleaned up in a subsequent change where get_scope_id(cid) is
replaced by a broader get_collection_meta function.

The updated test_app case highlighted that the usage of get_scope_id
occurred before the incoming key data had been validated by
is_document_key_valid, this is now addressed by incorporating
is_document_key_valid into verify_header

Change-Id: I802e978516af61164830439a12ea08f4f5155df7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-10-25 16:07:03.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-10-25 16:07:18.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/321569/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-25 16:17:55.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/385/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:1603:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:2180:66: error: too few arguments to function call, expected 7, have 6 [clang-diagnostic-error]
                                        PROTOCOL_BINARY_RAW_BYTES);
                                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:121:1: note: "verify_header" declared here
Status McbpValidator::verify_header(Cookie& cookie,
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:2189:66: error: too few arguments to function call, expected 7, have 6 [clang-diagnostic-error]
                                        PROTOCOL_BINARY_RAW_BYTES);
                                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:121:1: note: "verify_header" declared here
Status McbpValidator::verify_header(Cookie& cookie,
^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/385/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:1603:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/385/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/523/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/daemon/mcbp_validators.cc(1603): error C2059: syntax error: "<<" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/523/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/375/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/daemon/mcbp_validators.cc:1603:1:
error: version control conflict marker in file
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/375/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/410/ : FAILURE

Compile error at [2022-10-25T16:12:51.419Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/daemon/mcbp_validators.cc:1603:1:
error: version control conflict marker in file
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/410/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/405/ : FAILURE

Compile error at [2022-10-25T16:11:12.957Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/daemon/mcbp_validators.cc:1603:1:
error: version control conflict marker in file
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/405/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/400/ : FAILURE

Compile error at [2022-10-25T16:15:07.648Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/daemon/mcbp_validators.cc:1603:1:
error: version control conflict marker in file
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/400/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/387/ : FAILURE

Compile error at [2022-10-25T16:11:05.863Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/daemon/mcbp_validators.cc:1603:1:
error: version control conflict marker in file
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/387/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/400/ : FAILURE

Compile error at [2022-10-25T16:13:15.475Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/daemon/mcbp_validators.cc:1603:1:
error: version control conflict marker in file
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/400/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/386/ : FAILURE

Compile error at [2022-10-25T16:13:28.815Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/daemon/mcbp_validators.cc:1603:1:
error: version control conflict marker in file
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/386/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/620/ : FAILURE

Compile error at [2022-10-25T16:15:27.160Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/daemon/mcbp_validators.cc:1603:1:
error: version control conflict marker in file
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/620/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20701/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
